# cafe-settings-daemon

./: .build.yml  .travis.yml  AUTHORS  COPYING.LIB  Makefile.am  NEWS  README  autogen.sh  cafe-settings-daemon.pot  configure.ac  index.html  makepot  output_26f9f75fca7c01bdac7d6ccf31e1261b37eb435b  output_b093309af1b041437c02c1799c62b7888bf91f82  output_ba77939082bce1b3a6b4f41ad6e60c6316b56410
cafe-settings-daemon/: Makefile.am  cafe-settings-bus.c  cafe-settings-bus.h  cafe-settings-manager.c  cafe-settings-manager.h  cafe-settings-manager.xml  cafe-settings-module.c  cafe-settings-module.h  cafe-settings-plugin-info.c  cafe-settings-plugin-info.h  cafe-settings-plugin.c  cafe-settings-plugin.h  cafe-settings-profile.c  cafe-settings-profile.h  main.c
plugins/a11y-keyboard/: Makefile.am  a11y-keyboard.cafe-settings-plugin.desktop.in  csd-a11y-keyboard-manager.c  csd-a11y-keyboard-manager.h  csd-a11y-keyboard-plugin.c  csd-a11y-keyboard-plugin.h  csd-a11y-preferences-dialog.c  csd-a11y-preferences-dialog.h  csd-a11y-preferences-dialog.ui  csd_a11y-keyboard-manager.c  csd_a11y-keyboard-manager.h  csd_a11y-keyboard-plugin.c  csd_a11y-preferences-dialog.c  csd_a11y-preferences-dialog.ui  msd-a11y-keyboard-manager.c  msd-a11y-keyboard-plugin.c  msd-a11y-keyboard-plugin.h  msd-a11y-preferences-dialog.c  msd-a11y-preferences-dialog.h  msd-a11y-preferences-dialog.ui  test-a11y-preferences-dialog.c
plugins/a11y-settings/: Makefile.am  a11y-settings.mate-settings-plugin.desktop.in  csd-a11y-settings-manager.c  csd-a11y-settings-manager.h  csd-a11y-settings-plugin.c  csd-a11y-settings-plugin.h  csd_a11y-settings-manager.c  csd_a11y-settings-plugin.c  msd-a11y-settings-manager.c  msd-a11y-settings-plugin.c  msd-a11y-settings-plugin.h
plugins/background/: Makefile.am  background.mate-settings-plugin.desktop.in  csd-background-manager.c  csd-background-manager.h  csd-background-plugin.c  csd-background-plugin.h  csd_background-manager.c  csd_background-plugin.c  msd-background-manager.c  msd-background-plugin.c  msd-background-plugin.h  test-background.c
plugins/clipboard/: Makefile.am  clipboard.cafe-settings-plugin.desktop.in  csd-clipboard-manager.c  csd-clipboard-manager.h  csd-clipboard-plugin.c  csd-clipboard-plugin.h  csd_clipboard-manager.c  csd_clipboard-manager.h  csd_clipboard-plugin.c  csd_clipboard-plugin.h  msd-clipboard-manager.c  msd-clipboard-plugin.c  msd-clipboard-plugin.h  xutils.c  xutils.h
plugins/common/: Makefile.am  csd-input-helper.c  csd-keygrab.c  csd-keygrab.h  csd-osd-window.c  csd-osd-window.h  csd_input-helper.c  csd_keygrab.c  csd_osd-window.c  csd_osd-window.h  eggaccelerators.c  eggaccelerators.h  msd-input-helper.c  msd-keygrab.c  msd-osd-window.c  msd-osd-window.h
plugins/datetime/: Makefile.am  csd-datetime-mechanism-main.c  csd-datetime-mechanism.c  csd-datetime-mechanism.h  csd_datetime-mechanism-main.c  csd_datetime-mechanism.c  csd_datetime-mechanism.h  csd_datetime-mechanism.xml  msd-datetime-mechanism-main.c  org.cafe.SettingsDaemon.DateTimeMechanism.conf  org.cafe.SettingsDaemon.DateTimeMechanism.service.in  org.cafe.settingsdaemon.datetimemechanism.policy.in  system-timezone.c
plugins/dummy/: Makefile.am  csd-dummy-manager.c  csd-dummy-manager.h  csd-dummy-plugin.c  csd-dummy-plugin.h  csd_dummy-manager.c  csd_dummy-manager.h  csd_dummy-plugin.c  dummy.cafe-settings-plugin.desktop.in  msd-dummy-manager.c  msd-dummy-plugin.c  msd-dummy-plugin.h
plugins/housekeeping/: Makefile.am  csd-disk-space.c  csd-disk-space.h  csd-housekeeping-manager.c  csd-housekeeping-manager.h  csd-housekeeping-plugin.c  csd-housekeeping-plugin.h  csd-ldsm-dialog.c  csd-ldsm-dialog.h  csd-ldsm-trash-empty.c  csd-ldsm-trash-empty.h  csd_disk-space.c  csd_housekeeping-manager.c  csd_housekeeping-manager.h  csd_housekeeping-plugin.c  csd_housekeeping-plugin.h  csd_ldsm-dialog.c  csd_ldsm-dialog.h  csd_ldsm-trash-empty.c  csd_ldsm-trash-empty.h  housekeeping.cafe-settings-plugin.desktop.in  msd-disk-space.c  msd-housekeeping-plugin.c  msd-housekeeping-plugin.h  msd-ldsm-dialog.c  msd-ldsm-dialog.h  msd-ldsm-trash-empty.c
plugins/keybindings/: Makefile.am  csd-keybindings-manager.c  csd-keybindings-manager.h  csd-keybindings-plugin.c  csd-keybindings-plugin.h  csd_keybindings-manager.c  csd_keybindings-plugin.c  keybindings.cafe-settings-plugin.desktop.in  msd-keybindings-manager.c  msd-keybindings-plugin.c  msd-keybindings-plugin.h
plugins/media-keys/: Makefile.am  acme.h  acme.ui  csd-media-keys-manager.c  csd-media-keys-manager.h  csd-media-keys-manager.xml  csd-media-keys-plugin.c  csd-media-keys-plugin.h  csd-media-keys-window.c  csd-media-keys-window.h  csd_media-keys-manager.c  csd_media-keys-plugin.c  csd_media-keys-window.c  csd_media-keys-window.h  media-keys.cafe-settings-plugin.desktop.in  msd-media-keys-manager.c  msd-media-keys-manager.xml  msd-media-keys-plugin.c  msd-media-keys-plugin.h  msd-media-keys-window.c  msd-media-keys-window.h  test-media-keys.c  test-media-window.c
plugins/mouse/: Makefile.am  csd-locate-pointer.c  csd-locate-pointer.h  csd-mouse-manager.c  csd-mouse-manager.h  csd-mouse-plugin.c  csd-mouse-plugin.h  csd-timeline.c  csd-timeline.h  csd_locate-pointer.c  csd_locate-pointer.h  csd_mouse-manager.c  csd_mouse-plugin.c  csd_mouse-plugin.h  csd_timeline.c  csd_timeline.h  mouse.mate-settings-plugin.desktop.in  msd-locate-pointer.c  msd-locate-pointer.h  msd-mouse-manager.c  msd-mouse-plugin.c  msd-mouse-plugin.h  msd-timeline.c  msd-timeline.h
plugins/mpris/: Makefile.am  bus-watch-namespace.c  csd-mpris-manager.c  csd-mpris-manager.h  csd-mpris-plugin.c  csd-mpris-plugin.h  csd_mpris-manager.c  csd_mpris-plugin.c  csd_mpris-plugin.h  mpris.mate-settings-plugin.desktop.in  msd-mpris-manager.c  msd-mpris-plugin.c  msd-mpris-plugin.h
plugins/rfkill/: Makefile.am  csd-rfkill-manager.c  csd-rfkill-manager.h  csd-rfkill-plugin.c  csd-rfkill-plugin.h  csd_rfkill-manager.c  csd_rfkill-manager.h  csd_rfkill-plugin.c  msd-rfkill-manager.c  msd-rfkill-plugin.c  msd-rfkill-plugin.h  rfkill-glib.c  (+1 more)
plugins/sound/: Makefile.am  (+11 more)
(+1468 files in other folders)
